# waypoint

./: Cargo.toml  Dockerfile  config.yaml
src/: main.rs
